swift/ql/test/extractor-tests/errors/unresolved.swift
//codeql-extractor-expected-status: 1

func foo<T>() {}

foo<Undefined>()
